Prevent grid from growing and deforming when screen is too big

--- a/style.css
+++ b/style.css
@@ -87,18 +87,12 @@ button:active {
   margin: auto 30px auto auto;
   height: 100%;
   justify-content: space-between;
-  
   align-items: center;
-}
-
-#main-grid-div {
-
 }
 
 .box {
   flex: 1;
   display: flex;
-  flex-wrap: wrap;
   justify-content: center;
 }
 
@@ -107,10 +101,6 @@ button:active {
   justify-content: start;
   align-items: start;
   height: 100%;
-}
-
-#right-sub-col {
-  
 }
 
 .row-div {
@@ -173,21 +163,20 @@ button:active {
 }
 
 #color-rainbow {
-  background: linear-gradient(
-    45deg,
-    rgba(255, 0, 0, 1) 0%,
-    rgba(255, 154, 0, 1) 10%,
-    rgba(208, 222, 33, 1) 20%,
-    rgba(79, 220, 74, 1) 30%,
-    rgba(63, 218, 216, 1) 40%,
-    rgba(47, 201, 226, 1) 50%,
-    rgba(28, 127, 238, 1) 60%,
-    rgba(95, 21, 242, 1) 70%,
-    rgba(186, 12, 248, 1) 80%,
-    rgba(251, 7, 217, 1) 90%,
-    rgba(255, 0, 0, 1) 100%
-);
+  background: linear-gradient(45deg,
+      rgba(255, 0, 0, 1) 0%,
+      rgba(255, 154, 0, 1) 10%,
+      rgba(208, 222, 33, 1) 20%,
+      rgba(79, 220, 74, 1) 30%,
+      rgba(63, 218, 216, 1) 40%,
+      rgba(47, 201, 226, 1) 50%,
+      rgba(28, 127, 238, 1) 60%,
+      rgba(95, 21, 242, 1) 70%,
+      rgba(186, 12, 248, 1) 80%,
+      rgba(251, 7, 217, 1) 90%,
+      rgba(255, 0, 0, 1) 100%);
 }
+
 /* ^^^^^ Button Colors ^^^^^ */
 
 
@@ -200,6 +189,7 @@ button:active {
   place-items: center;
   row-gap: 25px;
 }
+
 #eraser {
   width: 75px;
   grid-column: 3;
@@ -236,7 +226,6 @@ button:active {
 }
 
 #button-minus-10 {
-  
   background-color: #bbbaba;
 }
 
@@ -246,7 +235,6 @@ button:active {
   background-size: 26px;
   background-repeat: no-repeat;
   background-position: center;
-  
 }
 
 #button-plus-10 {
